...
        android:layout_marginEnd="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand_filter_title" />

    <SeekBar
        android:id="@+id/price_filter_seekbar"
        android:layout_width="340dp"
        android:layout_height="36dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="59dp"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_marginTop="20dp"
        android:layout_marginEnd="155dp"
        android:backgroundTint="#9748FF"
        android:text="Clear all filters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_filter_btn" />

    <ImageButton
        android:id="@+id/search_filter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
...
