...
                    android:background="#FFFFFF"
                    android:translationY="10dp"
                    app:srcCompat="@drawable/group_30"
                    android:contentDescription="@string/todo57" />

                <ImageButton
                    android:id="@+id/filter_button"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/t_m_ki_m"
                    android:paddingHorizontal="10dp"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.01"
                    tools:ignore="RtlSymmetry" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="389dp"
                    android:layout_height="730dp"
                    android:layout_marginTop="11dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/results_found" />
...
